Use SequencedCollection methods (#2037)